--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -26,9 +26,13 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip
+
       - name: Install dependencies
         run: |
-          pip install bandit pip-audit google-generativeai
+          pip install bandit pip-audit python-dotenv google-genai
 
       - name: Run AI Security Scanner
         run: |
