--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -18,26 +18,30 @@ jobs:
       APPLY_FIXES: ${{ github.event.inputs.apply_fixes }}
 
     steps:
+      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2️⃣ Set up Python 3.11
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # 3️⃣ Upgrade pip to latest version
       - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
 
+      # 4️⃣ Install required Python packages
       - name: Install dependencies
         run: |
           pip install bandit pip-audit python-dotenv google-genai
 
+      # 5️⃣ Run the AI Security Scanner
       - name: Run AI Security Scanner
-        run: |
-          python scanner/main.py
+        run: python scanner/main.py
 
+      # 6️⃣ Upload Security Report as artifact
       - name: Upload Security Report
         uses: actions/upload-artifact@v4
         with:
